[package]
name    = "test-atspi-p2p"
version = "0.1.0"
edition = "2024"

[workspace]
# Empty workspace section to avoid warnings about missing workspace members.


[dependencies]
argh = "0.1.13"
tracing = { version = "0.1.41", features = ["std"] }
async-lock = "3.4"
atspi = { git = "https://github.com/odilia-app/atspi", branch = "p2p", version = "0.27.0", features = [
   "tracing",
] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "tracing-log"] }
zbus = { version = "5.9.0", features = ["p2p", "tokio"] }
